--- a/EXERCISES/CSS/style.css
+++ b/EXERCISES/CSS/style.css
@@ -1,6 +1,17 @@
-h1,h2 {
-    background-color: darkgray;
-    text-emphasis-color: 10px;
-    box-lines: auto
-    ;
+body {
+    font-size: 20px;
+}
+h1,h2, {
+    
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1,5em;
+    color: hotpink;
+    
+}
+p {
+    font-size: 1,5em;
+    color:red;
+    background-color: #F00;
+    color: rgb(255, 0, 0);
+    background-color: rgba(0, 255, 100, 0.5);
 }
