--- a/EXERCISES/CSS/style.css
+++ b/EXERCISES/CSS/style.css
@@ -1,20 +1,15 @@
-body {
-    font-size: 20px;
+body{
+    font-size: 18px;
 }
-h1,h2, {
-    
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 1,5em;
-    color: hotpink;
-    
+.wrapper{
+    max-width: 1000px;
+    margin: 0 auto;
 }
-.div {
-    
-}
-p {
-    font-size: 1,5em;
-    color:red;
-    background-color: #F00;
-    color: rgb(255, 0, 0);
-    background-color: rgba(0, 255, 100, 0.5);
+
+.big-btn {
+    width: 100px;
+    height: 50px;
+    margin: 10px;
+
+
 }
