--- a/EXERCISES/TRAFIKLJUSET/style.css
+++ b/EXERCISES/TRAFIKLJUSET/style.css
@@ -1,40 +1,37 @@
 body {
     background-color: gray;
-}
+    }
+
 .wrapper {
-    background-color: white;
+    background-color: black;
     width: 100px;
     height: auto;
     margin-left: auto;
     margin-right: auto;
-    margin-top:  4px;
-    ;
-
-    
-    
-
+    margin-top: 4px;
+    padding: 5px;
 }
+
 .red {
     padding: 5px;
     background-color: red;
     height: 200px;
     position: relative;
-    border: 5px solid black;
+    border: 5px solid white;
+    border-radius: 10%;
     /* margin-bottom: 4px;
     margin-left: 4px;
     margin-right: 4px;
     margin-top: 4px; */
     margin: 4px;
-    
-    
-
 }
 .yellow {
     padding: 5px;
     background-color: yellow;
     height: 200px;
     position: relative;
-    border: 5px solid black;
+    border: 5px solid white;
+    border-radius: 10%;
     /* margin-bottom: 4px;
     margin-left: 4px;
     margin-right: 4px;
@@ -47,11 +44,15 @@ body {
     background-color: green;
     height: 200px;
     position: relative;
-    border: 5px solid black;
+    border: 5px solid white;
+    border-radius: 10%;
     /* margin-bottom: 4px;
     margin-left: 4px;
     margin-right: 4px;
     margin-top: 4px; */
     margin: 4px;
 
+}
+h2 {
+    text-align: center;
 }
